--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -5,7 +5,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - run: ./gradlew assembleDebug
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'adopt'
+          java-version: '17'
+      - name: Validate Gradle Wrapper
+        run: ./gradlew wrapperValidation
+      - name: Build Project
+        run: ./gradlew assembleDebug
       - uses: actions/upload-artifact@v4
         with:
           name: app-debug
